# GRQ-validation

./: .gitignore  .markdownlint-cli2.jsonc  ANNUALIZED_PERFORMANCE_CALCULATION.md  AUTO_FORMAT_WORKFLOW.md  CARGO_AUDIT_FIX.md  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TEST_CASES_SUMMARY.md  check_syntax.ts  debug_schw_current_price.ts  deno.json  fix_summary.md  pa11yci.json  process_date.sh  quality.sh  run.sh  run_annualized_tests.sh  setup-hooks.sh  test_feb15.rs  test_formula_verification.js
.github/: CODEOWNERS  branch-protection.json  dependabot.yml
coverage/: tarpaulin-report.html
docs/: README.md  USDAUD.json  app-broken.js  app-old.js  app.js  browserconfig.xml  chart_popout.js  chart_theme.js  chart_title.js  chart_window_settings.js  color_key.js  dashboard_boot.js  date_selection.js  escape.js  field_label.js  format.js  freshness_text.js  index-old.html  index.html  index_overlay.js  list.css  list.html  list.js  list_render.js  list_stats.js  logo.xcf  manifest.json  market-indices.json  market_index.js  popover_cleanup.js  popover_dismiss.js  pr-summary-11.md  pr-summary-22.md  pr-summary-23.md  pr-summary-24.md  pr-summary-25.md  pr-summary-26.md  projection.js  series_label_colour.js  share_link.js  (+17 more)
helpers/: bump_quarantine_gate.ts  js_syntax.ts  server.sh  server.ts
scripts/: bump_version.ts  buy_price_denominator_diagnostic.ts  check_market_csvs.py  diagnose_buy_price_denominator.ts  diagnose_dividend_basis.ts  diagnose_freshness_indicator.ts  diagnose_horizon_split_parity.ts  diagnose_price_basis.ts  (+14 more)
(+1844 files in other folders)
