[package]
name = "grq-validation"
version = "0.1.3"
edition = "2021"
authors = ["Nigel Leck nigel@stsoftware.com.au"]
description = "A Rust program to process daily stock scores from TSV files"

[lib]
name = "grq_validation"
path = "src/lib.rs"

[dependencies]
# For CSV/TSV processing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For date/time handling
chrono = { version = "0.4", features = ["serde"] }

# For file system operations
walkdir = "2.4"

# For error handling
anyhow = "1.0"
thiserror = "1.0"

# For command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# For logging
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "grq-validation"
path = "src/main.rs" 